; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/ble/ble_spp_client/main/extr_spp_client_demo.c_ble_client_appRegister.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/ble/ble_spp_client/main/extr_spp_client_demo.c_ble_client_appRegister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GATTC_TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"register callback\00", align 1
@esp_gap_cb = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [23 x i8] c"gap register error: %s\00", align 1
@esp_gattc_cb = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [25 x i8] c"gattc register error: %s\00", align 1
@PROFILE_APP_ID = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [26 x i8] c"set local  MTU failed: %s\00", align 1
@cmd_reg_queue = common dso_local global i8* null, align 8
@spp_client_reg_task = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [20 x i8] c"spp_client_reg_task\00", align 1
@cmd_heartbeat_queue = common dso_local global i8* null, align 8
@spp_heart_beat_task = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ble_client_appRegister() #0 {
  %1 = alloca i64, align 8
  %2 = alloca [20 x i8], align 16
  %3 = alloca i64, align 8
  %4 = load i32, i32* @GATTC_TAG, align 4
  %5 = call i32 @ESP_LOGI(i32 %4, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %6 = load i32, i32* @esp_gap_cb, align 4
  %7 = call i64 @esp_ble_gap_register_callback(i32 %6)
  store i64 %7, i64* %1, align 8
  %8 = load i64, i64* @ESP_OK, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %16

10:                                               ; preds = %0
  %11 = load i32, i32* @GATTC_TAG, align 4
  %12 = load i64, i64* %1, align 8
  %13 = getelementptr inbounds [20 x i8], [20 x i8]* %2, i64 0, i64 0
  %14 = call i32 @esp_err_to_name_r(i64 %12, i8* %13, i32 20)
  %15 = call i32 @ESP_LOGE(i32 %11, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i32 %14)
  br label %43

16:                                               ; preds = %0
  %17 = load i32, i32* @esp_gattc_cb, align 4
  %18 = call i64 @esp_ble_gattc_register_callback(i32 %17)
  store i64 %18, i64* %1, align 8
  %19 = load i64, i64* @ESP_OK, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %27

21:                                               ; preds = %16
  %22 = load i32, i32* @GATTC_TAG, align 4
  %23 = load i64, i64* %1, align 8
  %24 = getelementptr inbounds [20 x i8], [20 x i8]* %2, i64 0, i64 0
  %25 = call i32 @esp_err_to_name_r(i64 %23, i8* %24, i32 20)
  %26 = call i32 @ESP_LOGE(i32 %22, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0), i32 %25)
  br label %43

27:                                               ; preds = %16
  %28 = load i32, i32* @PROFILE_APP_ID, align 4
  %29 = call i32 @esp_ble_gattc_app_register(i32 %28)
  %30 = call i64 @esp_ble_gatt_set_local_mtu(i32 200)
  store i64 %30, i64* %3, align 8
  %31 = load i64, i64* %3, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %39

33:                                               ; preds = %27
  %34 = load i32, i32* @GATTC_TAG, align 4
  %35 = load i64, i64* %3, align 8
  %36 = getelementptr inbounds [20 x i8], [20 x i8]* %2, i64 0, i64 0
  %37 = call i32 @esp_err_to_name_r(i64 %35, i8* %36, i32 20)
  %38 = call i32 @ESP_LOGE(i32 %34, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.3, i64 0, i64 0), i32 %37)
  br label %39

39:                                               ; preds = %33, %27
  %40 = call i8* @xQueueCreate(i32 10, i32 4)
  store i8* %40, i8** @cmd_reg_queue, align 8
  %41 = load i32, i32* @spp_client_reg_task, align 4
  %42 = call i32 @xTaskCreate(i32 %41, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.4, i64 0, i64 0), i32 2048, i32* null, i32 10, i32* null)
  br label %43

43:                                               ; preds = %39, %21, %10
  ret void
}

declare dso_local i32 @ESP_LOGI(i32, i8*) #1

declare dso_local i64 @esp_ble_gap_register_callback(i32) #1

declare dso_local i32 @ESP_LOGE(i32, i8*, i32) #1

declare dso_local i32 @esp_err_to_name_r(i64, i8*, i32) #1

declare dso_local i64 @esp_ble_gattc_register_callback(i32) #1

declare dso_local i32 @esp_ble_gattc_app_register(i32) #1

declare dso_local i64 @esp_ble_gatt_set_local_mtu(i32) #1

declare dso_local i8* @xQueueCreate(i32, i32) #1

declare dso_local i32 @xTaskCreate(i32, i8*, i32, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
